# milvus_metadata_design

./: .gitignore  Integration_todos.md  PHASE1.md  README.md  TODOS.md  alab.py  app.py  data.py  factories.py  init_db.py  lab.py  main.py  models.py
apps/: app1.py  app2.py  app3.py  example2.py  example2_1.py  example3.py  example4.py  managers.py  simple_example.py
cpp_impl/: '  BaseHolders.h  BaseHolders.inl  BaseResource.h  CMakeLists.txt  CompoundOperations.cpp  CompoundOperations.h  Context.h  Helper.cpp  Helper.h  Holders.cpp  Holders.h  Holders.inl  OperationExecutor.h  Operations.cpp  Operations.h  Proxy.h  ResourceHolders.cpp  ResourceHolders.h  ResourceOperations.cpp  ResourceOperations.h  Resources.cpp  Resources.h  Resources.inl  Schema.h  ScopedResource.h  Snapshot.cpp  Snapshot.h  SnapshotHolder.cpp  SnapshotHolder.h  Snapshots.cpp  Snapshots.h  Store.cpp  Store.h  Types.h  Utils.cpp  Utils.h  main.cpp  schema.pb.cc  schema.pb.h  (+1 more)
cpp_impl/db/: Utils.cpp  Utils.h
cpp_impl/utils/: BlockingQueue.h  BlockingQueue.inl
database/: factories.py  models.py  utils.py
python_impl/: requirements.txt
python_impl/apps/: app1.py  example2.py  example2_1.py  simple_example.py
python_impl/database/: __init__.py
python_impl/utils/: resource_manager.py
tools/: flowchart.py
utils/: __init__.py  events.py  managers.py  mixins.py  wrapper.py
